@@ -15,7 +15,6 @@
  * limitations under the License.
  */
 
-
 package org.apache.commons.logging.impl;
 
 import java.lang.ref.ReferenceQueue;
@@ -31,22 +30,39 @@ import junit.framework.TestCase;
 
 public class WeakHashtableTestCase extends TestCase {
 
+    public static class StupidThread extends Thread {
+
+        public StupidThread(final String name) {
+            super(name);
+        }
+
+        @Override
+        public void run() {
+            for (int i = 0; i < RUN_LOOPS; i++) {
+                hashtable.put("key" + ":" + i % 10, Boolean.TRUE);
+                if (i % 50 == 0) {
+                    yield();
+                }
+            }
+        }
+    }
     private static final int WAIT_FOR_THREAD_COMPLETION = 5000; // 5 seconds
     private static final int RUN_LOOPS = 3000;
     private static final int OUTER_LOOP = 400;
+
     private static final int THREAD_COUNT = 10;
 
     private static WeakHashtable hashtable;
 
     /** Maximum number of iterations before our test fails */
     private static final int MAX_GC_ITERATIONS = 50;
-
     private WeakHashtable weakHashtable;
     private Long keyOne;
     private Long keyTwo;
     private Long keyThree;
     private Long valueOne;
     private Long valueTwo;
+
     private Long valueThree;
 
     public WeakHashtableTestCase(final String testName) {
@@ -58,12 +74,12 @@ public class WeakHashtableTestCase extends TestCase {
         super.setUp();
         weakHashtable = new WeakHashtable();
 
-        keyOne = new Long(1);
-        keyTwo = new Long(2);
-        keyThree = new Long(3);
-        valueOne = new Long(100);
-        valueTwo = new Long(200);
-        valueThree = new Long(300);
+        keyOne = Long.valueOf(1);
+        keyTwo = Long.valueOf(2);
+        keyThree = Long.valueOf(3);
+        valueOne = Long.valueOf(100);
+        valueTwo = Long.valueOf(200);
+        valueThree = Long.valueOf(300);
 
         weakHashtable.put(keyOne, valueOne);
         weakHashtable.put(keyTwo, valueTwo);
@@ -72,35 +88,35 @@ public class WeakHashtableTestCase extends TestCase {
 
     /** Tests public boolean contains(Object value) */
     public void testContains() throws Exception {
-        assertFalse(weakHashtable.contains(new Long(1)));
-        assertFalse(weakHashtable.contains(new Long(2)));
-        assertFalse(weakHashtable.contains(new Long(3)));
-        assertTrue(weakHashtable.contains(new Long(100)));
-        assertTrue(weakHashtable.contains(new Long(200)));
-        assertTrue(weakHashtable.contains(new Long(300)));
-        assertFalse(weakHashtable.contains(new Long(400)));
+        assertFalse(weakHashtable.contains(Long.valueOf(1)));
+        assertFalse(weakHashtable.contains(Long.valueOf(2)));
+        assertFalse(weakHashtable.contains(Long.valueOf(3)));
+        assertTrue(weakHashtable.contains(Long.valueOf(100)));
+        assertTrue(weakHashtable.contains(Long.valueOf(200)));
+        assertTrue(weakHashtable.contains(Long.valueOf(300)));
+        assertFalse(weakHashtable.contains(Long.valueOf(400)));
     }
 
     /** Tests public boolean containsKey(Object key) */
     public void testContainsKey() throws Exception {
-        assertTrue(weakHashtable.containsKey(new Long(1)));
-        assertTrue(weakHashtable.containsKey(new Long(2)));
-        assertTrue(weakHashtable.containsKey(new Long(3)));
-        assertFalse(weakHashtable.containsKey(new Long(100)));
-        assertFalse(weakHashtable.containsKey(new Long(200)));
-        assertFalse(weakHashtable.containsKey(new Long(300)));
-        assertFalse(weakHashtable.containsKey(new Long(400)));
+        assertTrue(weakHashtable.containsKey(Long.valueOf(1)));
+        assertTrue(weakHashtable.containsKey(Long.valueOf(2)));
+        assertTrue(weakHashtable.containsKey(Long.valueOf(3)));
+        assertFalse(weakHashtable.containsKey(Long.valueOf(100)));
+        assertFalse(weakHashtable.containsKey(Long.valueOf(200)));
+        assertFalse(weakHashtable.containsKey(Long.valueOf(300)));
+        assertFalse(weakHashtable.containsKey(Long.valueOf(400)));
     }
 
     /** Tests public boolean containsValue(Object value) */
     public void testContainsValue() throws Exception {
-        assertFalse(weakHashtable.containsValue(new Long(1)));
-        assertFalse(weakHashtable.containsValue(new Long(2)));
-        assertFalse(weakHashtable.containsValue(new Long(3)));
-        assertTrue(weakHashtable.containsValue(new Long(100)));
-        assertTrue(weakHashtable.containsValue(new Long(200)));
-        assertTrue(weakHashtable.containsValue(new Long(300)));
-        assertFalse(weakHashtable.containsValue(new Long(400)));
+        assertFalse(weakHashtable.containsValue(Long.valueOf(1)));
+        assertFalse(weakHashtable.containsValue(Long.valueOf(2)));
+        assertFalse(weakHashtable.containsValue(Long.valueOf(3)));
+        assertTrue(weakHashtable.containsValue(Long.valueOf(100)));
+        assertTrue(weakHashtable.containsValue(Long.valueOf(200)));
+        assertTrue(weakHashtable.containsValue(Long.valueOf(300)));
+        assertFalse(weakHashtable.containsValue(Long.valueOf(400)));
     }
 
     /** Tests public Enumeration elements() */
@@ -138,7 +154,7 @@ public class WeakHashtableTestCase extends TestCase {
         assertEquals(valueOne, weakHashtable.get(keyOne));
         assertEquals(valueTwo, weakHashtable.get(keyTwo));
         assertEquals(valueThree, weakHashtable.get(keyThree));
-        assertNull(weakHashtable.get(new Long(50)));
+        assertNull(weakHashtable.get(Long.valueOf(50)));
     }
 
     /** Tests public Enumeration keys() */
@@ -162,12 +178,39 @@ public class WeakHashtableTestCase extends TestCase {
         assertTrue(keySet.contains(keyThree));
     }
 
+    public void testLOGGING_119() throws Exception {
+        final Thread [] t = new Thread[THREAD_COUNT];
+        for (int j=1; j <= OUTER_LOOP; j++) {
+            hashtable = new WeakHashtable();
+            for (int i = 0; i < t.length; i++) {
+                t[i] = new StupidThread("Thread:" + i);
+                t[i].setDaemon(true); // Otherwise we cannot exit
+                t[i].start();
+            }
+            for (final Thread element : t) {
+                element.join(WAIT_FOR_THREAD_COMPLETION);
+                if (element.isAlive()) {
+                    break; // at least one thread is stuck
+                }
+            }
+            int active=0;
+            for (final Thread element : t) {
+                if (element.isAlive()) {
+                    active++;
+                }
+            }
+            if (active > 0) {
+                fail("Attempt: " + j + " Stuck threads: " + active);
+            }
+        }
+    }
+
     /** Tests public Object put(Object key, Object value) */
     public void testPut() throws Exception {
-        final Long anotherKey = new Long(2004);
-        weakHashtable.put(anotherKey, new Long(1066));
+        final Long anotherKey = Long.valueOf(2004);
+        weakHashtable.put(anotherKey, Long.valueOf(1066));
 
-        assertEquals(new Long(1066), weakHashtable.get(anotherKey));
+        assertEquals(Long.valueOf(1066), weakHashtable.get(anotherKey));
 
         // Test compliance with the hashtable API re nulls
         Exception caught = null;
@@ -191,11 +234,11 @@ public class WeakHashtableTestCase extends TestCase {
     /** Tests public void putAll(Map t) */
     public void testPutAll() throws Exception {
         final Map newValues = new HashMap();
-        final Long newKey = new Long(1066);
-        final Long newValue = new Long(1415);
+        final Long newKey = Long.valueOf(1066);
+        final Long newValue = Long.valueOf(1415);
         newValues.put(newKey, newValue);
-        final Long anotherNewKey = new Long(1645);
-        final Long anotherNewValue = new Long(1815);
+        final Long anotherNewKey = Long.valueOf(1645);
+        final Long anotherNewValue = Long.valueOf(1815);
         newValues.put(anotherNewKey, anotherNewValue);
         weakHashtable.putAll(newValues);
 
@@ -228,7 +271,7 @@ public class WeakHashtableTestCase extends TestCase {
      * IBM J9 VM (build 2.4, JRE 1.6.0 IBM J9 2.4 Linux x86-32 jvmxi3260sr12-20121024_1
      */
     public void xxxIgnoretestRelease() throws Exception {
-        assertNotNull(weakHashtable.get(new Long(1)));
+        assertNotNull(weakHashtable.get(Long.valueOf(1)));
         final ReferenceQueue testQueue = new ReferenceQueue();
         final WeakReference weakKeyOne = new WeakReference(keyOne, testQueue);
 
@@ -244,18 +287,17 @@ public class WeakHashtableTestCase extends TestCase {
         int bytz = 2;
         while(true) {
             System.gc();
-            if(iterations++ > MAX_GC_ITERATIONS){
+            if (iterations++ > MAX_GC_ITERATIONS) {
                 fail("Max iterations reached before resource released.");
             }
 
-            if(weakHashtable.get(new Long(1)) == null) {
+            if (weakHashtable.get(Long.valueOf(1)) == null) {
                 break;
 
-            } else {
-                // create garbage:
-                final byte[] b =  new byte[bytz];
-                bytz = bytz * 2;
             }
+            // create garbage:
+            final byte[] b =  new byte[bytz];
+            bytz *= 2;
         }
 
         // some JVMs seem to take a little time to put references on
@@ -266,49 +308,5 @@ public class WeakHashtableTestCase extends TestCase {
 
         // Test that the released objects are not taking space in the table
         assertEquals("underlying table not emptied", 0, weakHashtable.size());
-    }
-
-    public static class StupidThread extends Thread {
-
-        public StupidThread(final String name) {
-            super(name);
-        }
-
-        @Override
-        public void run() {
-            for (int i = 0; i < RUN_LOOPS; i++) {
-                hashtable.put("key" + ":" + i%10, Boolean.TRUE);
-                if(i%50 == 0) {
-                    yield();
-                }
-            }
-        }
-    }
-
-    public void testLOGGING_119() throws Exception {
-        final Thread [] t = new Thread[THREAD_COUNT];
-        for (int j=1; j <= OUTER_LOOP; j++) {
-            hashtable = new WeakHashtable();
-            for (int i = 0; i < t.length; i++) {
-                t[i] = new StupidThread("Thread:" + i);
-                t[i].setDaemon(true); // Otherwise we cannot exit
-                t[i].start();
-            }
-            for (final Thread element : t) {
-                element.join(WAIT_FOR_THREAD_COMPLETION);
-                if (element.isAlive()) {
-                    break; // at least one thread is stuck
-                }
-            }
-            int active=0;
-            for (final Thread element : t) {
-                if (element.isAlive()) {
-                    active++;
-                }
-            }
-            if (active > 0) {
-                fail("Attempt: " + j + " Stuck threads: " + active);
-            }
-        }
     }
 }
